# treer

./: Cargo.toml  README.md
src/: cmd.rs  main.rs
src/cmd/: display.rs  root.rs  traversal.rs  utils.rs
test_dir/: .hidden.txt
tests/: cli_test.rs  display_test.rs  utilities_test.rs
