[package]
name = "treer"
version = "0.1.4"
edition = "2024"
authors = ["anhtr13 <anhtr13@proton.me>"]
description = "Another 'tree' command provides better support for recursive searching and highlights match results."
keywords = ["tree", "cli", "utility"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/anhtr13/treer"
repository = "https://github.com/anhtr13/treer"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.54", features = ["derive"] }
glob = "0.3.3"
